Change dummy text in getting started section
- Was split up b/t GIS & CHI, reformatted to reflect that we want to
  elide that distinction

- Also made clearer what content we do eventually need

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -69,12 +69,12 @@ notes:
 		<div class="spatial-starting__how">
 			<!-- NB: merge these when add content -->
 			<ul class="spatial-starting__chi">
-				<h3>CHI</h3>
-				<li>Insert steps for getting started w/ CHI</li>
+				<h3>How to get in touch</h3>
+				<li>This section is a total black box until I know what kind of info structure we have</li>
 			</ul>
 			<ul class="spatial-starting__gis">
-				<h3>GIS</h3>
-				<li>Insert steps for getting started w/ GIS</li>
+				<h3>Hours/spaces</h3>
+				<li>Again, a black box. Probably should make a separate section w/ a diagram, though.</li>
 			</ul>
 		</div>
 	</div>
