Spell out words in "FAQ"; style to match FAQ title on homepage

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -80,7 +80,7 @@ notes:
 	</div>
 
 	<div class="spatial__faq">
-		<div class="spatial-faq__title">FAQ</div>
+		<div class="spatial-faq__title">Frequently<br/>Asked<br/>Questions</div>
 		<div class="spatial-faq__subtitle">A subtitle if we want one. <em>Designer's Note: in my head I just. keep. reading this. with the same creepy emphasis as "a democracy... <strong>if you can keep it."</strong> GAH ok the end.</em></div>
 		<ul class="spatial-faq__list">
 			<li><span>Question: foo bar bas bat bamus batis bant</span>Answer: Katherine remembers gibberish Latin better than she thought.</li>
