Flesh out dummy questions in FAQ section so text looks realistic

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -83,9 +83,16 @@ notes:
 		<div class="spatial-faq__title">Frequently<br/>Asked<br/>Questions</div>
 		<div class="spatial-faq__subtitle">A subtitle if we want one. <em>Designer's Note: in my head I just. keep. reading this. with the same creepy emphasis as "a democracy... <strong>if you can keep it."</strong> GAH ok the end.</em></div>
 		<ul class="spatial-faq__list">
-			<li><span>Question: foo bar bas bat bamus batis bant</span>Answer: Katherine remembers gibberish Latin better than she thought.</li>
-			<li>Etc.</li>
-			<li>E.g., explainers CHI has on their site, some FAQs that GIS links to maybe</li>
+			<!-- extra spaces b/t them so more readable code until we fill stuff in: -->
+			<li><img src="{{ 'assets/img/svg/asterisk-2.svg' | relative_url }}" alt="asterisk drawing" style="height:20px;width:20px"> <span>What is spatial tech?</span>We specialize in a wide-range of methods in spatial analysis related to mapping and the collection of cultural heritage data, for use across disciplines. Our expert staff are here to collaborate and support the application of spatial technologies in your research and in the classroom. [NB: this is not an actual answer to the question, just more realistic words than lorem ipsum.]</li>
+
+			<li><span>Isn't GIS just online maps?</span> E.g., explainers CHI has on their site, some FAQs that GIS links to maybe</li>
+
+			<li><span>What's the best way to get in touch?</span>Need help finding data, getting it on a map, or downloading the newest version of ArcGIS?  Check the FAQ’s on the GIS research page, search the UVA Library Geoportal, or come to a session in our Fall or Spring workshop series.   You can also consult directly with GIS specialist Chris Gist.  If you have questions or would like to schedule an appointment, please contact slabgis@virginia.edu.</li>
+
+			<li><span>What does Spatial Tech have to do with social justice?</span>Cultural heritage consists of tangible and intangible, natural and cultural, movable and immovable assets inherited from the past. It is of extremely high value for the present and the future of a country. Access, preservation, and education around cultural heritage are essential for the evolution of people and their culture. [NB: this is not an actual answer to the question, just more realistic words than lorem ipsum.]</li>
+
+			<li><span>Lorem ipsum foo bar bas bat bamus batis bant?</span>Katherine remembers gibberish Latin better than she thought.</li>
 		</ul>
 	</div>
 
