Add contact section

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -96,6 +96,10 @@ notes:
 		</ul>
 	</div>
 
+	<div class="spatial__contact">
+	  <div class="spatial-contact__title">Contact</div>
+	  <div class="spatial-contact__text">Either an hours & spaces diagram, or organized contact info/process for setting up an appointment.</div>
+	</div>
 	<!-- meant as more in-depth pairing w/ FAQ: -->
 	<div class="spatial__resources">
 		<div class="spatial-resources__title">Resources</div>
