Add <br/> in technologists label so formatting consistent w/ FAQ
- If super long words involved in a section title, add line breaks b/t
  words

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -180,7 +180,7 @@ notes:
 	</div> <!-- end inventory -->
 
 	<div class="spatial__people">
-		<div class="spatial-people__title">Spatial Technologists</div>
+		<div class="spatial-people__title">Spatial<br/>Technologists</div>
 		<ul class="spatial-people__list">
 			<!-- use Liquid here: -->
 			{% for person in site.people %}
