--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -187,7 +187,7 @@ notes:
 			{% if person.name == 'Will Rourk' or person.name == 'Arin Bennett' or person.name == 'Chris Gist' or person.name == 'Drew Macqueen' %}
 			<li class="spatial-people__person">
 				<div class="spatial-person__img"><img src="{{ site.baseurl }}/assets/img/people/{{ person.slug }}.jpg" alt="{{ person.name }}"></div>
-				<div class="spatial-person__name"><a href="#">{{ person.name }}</a></div> <!-- link to their page -->
+				<div class="spatial-person__name"><a href="{{ site.baseurl }}/people/{{ person.slug }}">{{ person.name }}</a></div> <!-- link to their page -->
 				<div class="spatial-person__position">{{ person.position }}</div>
 			</li>
 			{% endif %}
