Fix indentation & add comments to landing section

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -14,44 +14,44 @@ notes:
 
 <div class="spatial-landing-wrapper">
 	<div class="spatial-landing-grid">
-	<div class="spatial-landing__page-title" aria-label="Landing page">
-		<div class="spatial-title__text">Spatial Technologies</div>
-	</div>
-	<div class="spatial-landing__lines1">
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
-	<div class="spatial-landing__lines3">
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
-	<div class="spatial-landing__lines2">
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
-	</div>
-</div>
+		<div class="spatial-landing__page-title" aria-label="Landing page">
+			<div class="spatial-title__text">Spatial Technologies</div>
+		</div>
+		<div class="spatial-landing__lines1">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<div class="spatial-landing__lines3">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<div class="spatial-landing__lines2">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+	</div> <!-- end landing grid -->
+</div> <!-- end landing wrapper -->
 
 <div class="spatial-main-content">
 
@@ -100,6 +100,7 @@ notes:
 	  <div class="spatial-contact__title">Contact</div>
 	  <div class="spatial-contact__text">Either an hours & spaces diagram, or organized contact info/process for setting up an appointment.</div>
 	</div>
+
 	<!-- meant as more in-depth pairing w/ FAQ: -->
 	<div class="spatial__resources">
 		<div class="spatial-resources__title">Resources</div>
