Fix broken img links, & by fix I mean they are all dogs now

--- a/pages/research.html
+++ b/pages/research.html
@@ -62,7 +62,7 @@ notes:
       <div class="research__item">
         <a href="{{ site.baseurl }}/research/{{ page.slug }}" aria-label="{{ page.title }}">
           <div class="research-item__img">
-            <img src="{{ '/assets/img/research-new/' | append: 'possible-praxis.jpg' | relative_url }}" alt="{{ page.title }}">
+            <img src="{{ '/assets/img/people/' | append: 'scholarslab.png' | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title"><span>{{ page.title }}</span></div>
           <div class="research-item__year"><span>{{ page.year }}</span></div>
@@ -82,7 +82,7 @@ notes:
       <div class="research__item">
         <a href="{{ site.baseurl }}/research/{{ page.slug }}" aria-label="{{ page.title }}">
           <div class="research-item__img">
-            <img src="{{ '/assets/img/research-new/' | append: 'gears-outline.jpg' | relative_url }}" alt="{{ page.title }}">
+            <img src="{{ '/assets/img/people/' | append: 'scholarslab.png' | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title"><span>{{ page.title }}</span></div>
           <div class="research-item__year"><span>{{ page.year }}</span></div>
