Add wrappers to decorative cubes in landing area
- Allows easier placement of rotated elements w/o taking up tons of
  space

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -17,27 +17,31 @@ notes:
 		<div class="spatial-landing__page-title" aria-label="Landing page">
 			<div class="spatial-title__text">Spatial Technologies</div>
 		</div>
-		<div class="spatial-landing__lines1">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
+		<div class="spatial-landing__cube-wrapper-1">
+			<div class="spatial-landing__lines1">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
 		</div>
-		<div class="spatial-landing__lines3">
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
+		<div class="spatial-landing__cube-wrapper-3">
+			<div class="spatial-landing__lines3">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
 		</div>
 		<div class="spatial-landing__lines2">
 			<div></div>
