Update Progress Tracker re. Spatial Tech & research images

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -4,11 +4,11 @@ title: Spatial Tech
 permalink: /spatial-technologies/
 nav: true
 order: 6
-status: in progress
-time-required: ~6hrs
+status: almost done
+time-required: ~1hr
 notes:
-- Content:
-- Style: landing page mostly done, HTML skeleton in place
+- Content: blurb done, most other content needed
+- Style: HTML stable, landing page mostly stable, main content 75%
 - NB: time requirement is a repeat - see stats on "Phase 1, Other", #9 for details.
 ---
 
