--- a/pages/research.html
+++ b/pages/research.html
@@ -5,10 +5,10 @@ permalink: /research/
 nav: true
 order: 3
 status: 1/2 done
-time-required: ~2.5hrs in a crunch; ~5hrs ideally
+time-required: ~4hrs
 notes:
-- Content: generated from research/ dir. Blurb done 'til content team edits. Need some replacement images, size-wise.
-- Style: SCSS proving quite challenging. Wanted to do something fancier, but will probably phone it in for Phase 1 with simple grid under time constraint.
+- Content: generated from research/ dir. Blurb done 'til content team edits. New images acquired!
+- Style: Hopefully mostly done; about to see how things go with the new images.
 - NB: Amanda's organization on the initial nav links wrapped this within a larger frame of "Scholarship", which I dig a lot. Once that wrapper exists, this is no longer a topnav link itself.
 ---
 
