Mark pre-production pages as such (missed 2, were showing in Tracker)

--- a/pages/fake/flexible-nav.html
+++ b/pages/fake/flexible-nav.html
@@ -3,6 +3,7 @@ layout: no-header
 title: Flexible Navigation
 permalink: /flexible-nav/
 nav: false
+fake: true
 ---
 
 <div class="flexnav-wrapper">
