Update image variable on spatial tech page

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -238,7 +238,7 @@ notes:
 				<a href="{{ site.baseurl }}/research/{{ project.slug }}" aria-label="{{ project.title }}">
 					<ul class="spatial-showcase__project">
 						<li>{{ project.title }}</li>
-						<li><img src="{{ site.baseurl}}/assets/img/research/{{ project.thumb-img }}" alt="{{ project.title }}"></li>
+						<li><img src="{{ site.baseurl}}/assets/img/research/{{ project.banner-img }}" alt="{{ project.title }}"></li>
 					</ul>
 				</a>
 			</li>
