--- a/pages/research.html
+++ b/pages/research.html
@@ -62,7 +62,7 @@ notes:
       <div class="research__item">
         <a href="{{ site.baseurl }}/research/{{ page.slug }}" aria-label="{{ page.title }}">
           <div class="research-item__img">
-            <img src="{{ '/assets/img/research/' | append: page.thumb-img | relative_url }}" alt="{{ page.title }}">
+            <img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}">
           </div>
           <div class="research-item__title"><span>{{ page.title }}</span></div>
           <div class="research-item__year"><span>{{ page.year }}</span></div>
