--- a/pages/research.html
+++ b/pages/research.html
@@ -47,6 +47,47 @@ notes:
 	<p>This page shares a sampling of the Scholars’ Lab scholarship in its many states and forms, from incipient ideas to projects with their own laptop stickers.</p>
 </div>
 
+<div class="research-portfolio-wrapper">
+	<div class="research-folio__background--black">
+		<div class="research-folio__background--color">
+			<div class="research-folio__context">
+				<a href="#">Menu</a>
+				<a href="#">Other links</a>
+			</div>
+			<nav class="research-folio__nav">
+				<div class="research-nav__btn--left">&lsaquo;</div>
+				<div class="research-nav__tracker">
+					<span>01</span>
+					<div class="research-tracker__progress"></div>
+					<div class="research-tracker__remaining"></div>
+					<span>{{ site.research | size }}</span>
+				</div>
+				<div class="research-nav__btn--right">&rsaquo;</div>
+			</nav>
+
+			<div class="research-folio__gallery-wrapper">
+				<!-- gallery -->
+				<article class="research-folio__gallery">
+					{% for proj in site.research %}
+					<section class="research-gallery__item">
+						<a href="{{ site.baseurl }}/research/{{ proj.slug }}" aria-label="{{ proj.title }}">
+							<div class="research-item__num">{% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
+							<div class="research-item__name">{{ proj.title }}</div> <!-- avoiding title run-in -->
+							<div class="research-item__category">{{ proj.research-category }}</div>
+							<div class="research-item__pic">
+								<img width="200" src="{{ '/assets/img/research/' | append: proj.thumb-img | relative_url }}" alt="{{ proj.title }}">
+							</div>
+							<div class="research-item__yr">{{ proj.year }}</div>
+						</a>
+					</section>
+					{% endfor %}
+				</article> <!-- end gallery -->
+			</div> <!-- end gallery wrapper -->
+
+		</div> <!-- end color bg -->
+	</div> <!-- end black bg -->
+</div> <!-- end folio wrapper -->
+
 <div class="research-main-content" aria-label="Main content">
 	<!-- divide up research projects by category: -->
 	{% assign internal_projects = site.research | where: "research-category", "Internal Projects and Community Service" %}
