Expanded bit.ly address that broke Travis

--- a/pages/spatial-technologies.html
+++ b/pages/spatial-technologies.html
@@ -116,7 +116,7 @@ notes:
 		<div class="spatial-resources__subtitle">Didn't find what you were looking for, or want to explore these subjects more in-depth? [See...the stuff...below... or don't phrase this as a question whoops]</div>
 		<ul class="spatial-resources__list">
 			<li><span>University support of GIS:</span> <a href="https://guides.lib.virginia.edu/c.php?g=514920&p=3520109">GIS Lib Guide</a></li>
-			<li><span>Cultural heritage informatics at UVA:</span> <a href="bit.ly/UVA3D">data, demos, and news</a></li>
+			<li><span>Cultural heritage informatics at UVA:</span> <a href="https://pages.shanti.virginia.edu/Cultural_Heritage_Data/">data, demos, and news</a></li>
 		</ul>
 	</div>
 
