Remove width attribute from gallery images & comment out category section
- Width: may add back later, but was impeding workflow while styles are
  still changing frequently re. SCSS

- Category: seemed extraneous for a preview; wasn't adding much for the
  amount of text it added

--- a/pages/research.html
+++ b/pages/research.html
@@ -73,9 +73,9 @@ notes:
 						<a href="{{ site.baseurl }}/research/{{ proj.slug }}" aria-label="{{ proj.title }}">
 							<div class="research-item__num">{% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
 							<div class="research-item__name">{{ proj.title }}</div> <!-- avoiding title run-in -->
-							<div class="research-item__category">{{ proj.research-category }}</div>
+							<!--div class="research-item__category">{{ proj.research-category }}</div-->
 							<div class="research-item__pic">
-								<img width="200" src="{{ '/assets/img/research/' | append: proj.thumb-img | relative_url }}" alt="{{ proj.title }}">
+								<img src="{{ '/assets/img/research/' | append: proj.thumb-img | relative_url }}" alt="{{ proj.title }}">
 							</div>
 							<div class="research-item__yr">{{ proj.year }}</div>
 						</a>
