Wrap hero text in <p> for more consistent spacing
- And consistency w/ rest of website

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@ notes:
 
 <div class="home-main-content">
 	<div class="home__hero">
-		<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars:<br/><span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span><br/><br/>Come help us explore what that means—we'd love you to be a part of our community.</div>
-	 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
+		<div class="home-hero__text">
+			<p>At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span></p>
+			<p>Come help us explore what that means—we'd love you to be a part of our community.</p>
+		</div>
+		 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 	</div>
 
 	<div class="home__faq">
