Change class name from title to text -> avoid attribute selector
- Custom styled in SCSS updates, no longer giant

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ notes:
 	</div>
 
 	<div class="home__listserv-prompt">
-		<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff about upcoming events and workshops, grants, and opportunities for collaboration or paid apprenticeships.</div>
+		<div class="home-listserv__text" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff about upcoming events and workshops, grants, and opportunities for collaboration or paid apprenticeships.</div>
 		<div class="home-listserv__content">
 			<div class="home-listserv__input">< insert input tag for entering email ></div>
 			<button class="home-listserv__btn">Keep me in the loop</button>
