Replace ' - ' with ': ' in blog titles; add aria-label + title attr to link
- Couldn't figure out how to reasonably get the post preview titles to
  look like links interactively without them looking really weird/bad
  so am setting the title attribute right now so it at least responds
  when you hover

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,7 +42,7 @@ notes:
 						{% endif %}
 					</span>
 					<!-- # NB: no slash in href b/c included in post.url -->
-					<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+					<a href="{{ site.baseurl }}{{ post.url }}" aria-label="{{ post.title }}" title="{{ post.title }}">{{ post.title | replace: ' - ', ': ' }}</a>
 				</div>
 				<!-- # pull quote, or 1st 25 words of post content. -->
 				{% if post.pull-quote %}
