--- a/pages/blog.html
+++ b/pages/blog.html
@@ -50,20 +50,26 @@ notes:
 				{% else %}
 				<div class="blog-item__quote">{{ post.content | truncatewords: 25 | markdownify | strip_html }}</div>
 				{% endif %}
-				<!-- fetch author object, link to their page -->
-				{% assign author_object = site.people | where: 'slug', post.author %}
-				<div class="blog-item__author">
-					{% for author in author_object %}
-					    <a href="{{ site.baseurl }}/people/{{post.author}}/">{{ author.name }}</a>
-					{% endfor %}
-					{% if author_object == empty %}
-					    {% assign author = post.author | split: '-' %}
-					        {% for name in author %}
-					            {{ name | capitalize}}
-					        {% endfor %}
-					{% endif %}
+				<div class="blog-item__metadata">
+					<!-- fetch author object, link to their page -->
+					{% assign author_object = site.people | where: 'slug', post.author %}
+					<div class="blog-meta__author">
+						{% for author in author_object %}
+						    <a href="{{ site.baseurl }}/people/{{post.author}}/">{{ author.name }}</a>
+						{% endfor %}
+						{% if author_object == empty %}
+						    {% assign author = post.author | split: '-' %}
+						        {% for name in author %}
+						            {{ name | capitalize}}
+						        {% endfor %}
+						{% endif %}
+					</div>
+					<span>&#124;</span> <!-- pipe -->
+					<div class="blog-meta__date">
+						<span class="blog-date__small">{{ post.date | date: "%m.%d.%Y" }}</span>
+						<span class="blog-date__big">{{ post.date | date: "%B %-d, %Y" }}</span>
+					</div>
 				</div>
-				<div class="blog-item__date">{{ post.date | date: "%B %-d, %Y" }}</div>
 			</section>
 			{% endfor %} <!-- end post -->
 		</div> <!-- end gallery -->
