Update YAML: layout & notes

--- a/pages/people.html
+++ b/pages/people.html
@@ -1,12 +1,12 @@
 ---
-layout: page
+layout: default
 title: People
 permalink: /people/
 nav: true
 time-required: ~3.5hrs
 notes:
 - Content: generated from `_people`
-- Style: not started. Using simple grid gallery as base.
+- Style: grid gallery started
 ---
 
 <!-- people categories: staff, students, & alumni -->
