--- a/pages/people.html
+++ b/pages/people.html
@@ -17,8 +17,8 @@ notes:
 
 <div class="people-wrapper">
   <header class="people-page-header">
-    <div class="people-header__big-title">Our People</div>
-    <div class="people-header__subtitle"><!-- unsure if needed, but leaving structure in case --></div>
+    <div class="people-header__big-title">People</div>
+    <!--div class="people-header__subtitle"><!-- unsure if needed, but leaving structure in case -></div-->
   </header>
 
   <article class="people-main-content">
