Change section label from just a word to <div> <span> <div> flexbox
- See styling result (fakes a decorative underline)

--- a/pages/people.html
+++ b/pages/people.html
@@ -24,7 +24,10 @@ notes:
   <article class="people-main-content">
     <!-- staff: -->
     <section class="people__staff">
-      <div class="people-staff__title">Staff</div>
+      <!-- section label: -->
+      <div class="people-staff__title">
+        <div></div><span>Staff</span><div></div>
+      </div>
       <!-- NB: insert number of ppl; maybe color code by what we do (r&d, spatial tech, etc.) -->
       <!-- staff gallery: -->
       <div class="people-staff__gallery">
