--- a/index.html
+++ b/index.html
@@ -47,7 +47,33 @@ notes:
 
 	<div class="home__contact--1">
 		<div class="home-contact__title">Contact Us</div>
-		<div class="home-contact__content">Curious about experimental & digital research & teaching?<br/><br/><a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero experience needed.</div> <!-- should link to contact page -->
+		<div class="home-contact__content">Curious? Please get in touch with us—absolutely no prior experience or fully formed ideas needed!<br><br>Email us at <a href="mailto:scholarslab@virginia.edu">ScholarsLab@Virginia.edu</a> with questions, head right to our <a href="#">consultation request form</a> if you know you want to meet with us, or sign up below to hear about events and opportunities.
+<div>
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:300px;}
+</style>
+<div id="mc_embed_signup">
+<form action="https://virginia.us1.list-manage.com/subscribe/post?u=3ac105f4d87dddbd34542ab41&amp;id=25120106cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Scholars' Lab Newsletter</h2>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address </label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3ac105f4d87dddbd34542ab41_25120106cf" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+</dov>
 	</div>
 
 	<div class="home__students">
