--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,7 +15,7 @@ notes:
 <div class="blog-wrapper">
 	<header class="blog-page-header">
 		<div class="blog-header__big-title">Blog</div>
-		<div class="blog-header__subtitle">Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship around experimental and digital humanities and culture.</div>
+		<div class="blog-header__subtitle">Our thoughts, from rough new ideas to polished arguments. Scholars’ Lab team and collaborators write about their scholarship.</div>
 	</header>
 
 	<div class="blog-main-content">
