--- a/pages/makerspace.html
+++ b/pages/makerspace.html
@@ -30,7 +30,7 @@ notes:
   <div class="makerspace__ethos">
     <div class="maker-ethos__title">Ethos</div>
     <div class="maker-ethos__text">
-      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering, and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. <strong>Open to everyone</strong>—absolutely no prior experience needed!—we specialize in hands-on approaches to research questions in the humanities and arts.</p>
+      <p>The Scholars&#8217; Lab Makerspace is a place for crafting, tinkering, and experimentation with technologies like 3D printing, sewing, physical computing, and augmented reality. <strong>Open to everyone</strong>—absolutely no prior experience or fee needed!—we specialize in hands-on approaches to research questions in the humanities and arts.</p>
       <p>Informed by a rich tradition of Library support for exploring materiality in <a href="http://smallnotes.library.virginia.edu/">Special Collections</a> and the Fine Arts Library <a href="http://uvamagazine.org/articles/the_tactile_library">Materials Collection</a>, and for participating in the physical-made-digital in both the <a href="http://scholarslab.org/">Scholars&#8217; Lab</a> and the <a href="http://www.library.virginia.edu/blog/libraries/dml/">Digital Media Lab</a> in Clemons, our Makerspace Technologists can help faculty and student researchers evaluate new approaches to their work, and consider both the hows and the whys of making.</p>
       <p>Learning <i>how</i> to do something with humanities technology gives us a more informed perspective on <i>why</i> we do things in the humanities. <strong>Both are vital.</strong></p>
     </div>
@@ -90,7 +90,7 @@ notes:
         </ol>
         
         <p><strong>You will lose your print time if you do not show up within the first 15 minutes of your scheduled time.</strong></p>
-            <p>If you have any questions, feel free to ask.</p>
+            <p>If you have any questions, please do ask us! We enjoy helping folks figure out how to use our Makerspace.</p>
       </div>
   </div>
   <div class="makerspace__inventory">
@@ -161,8 +161,7 @@ notes:
       </ul>
     </div>
     <div class="maker-inventory__rules">
-      <p>All equipment is maintained for use in the Makerspace and is not available for check out at this time.<br/>
-      Don’t see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
+      <p>All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don’t see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">http://makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
     </div>
     <div class="maker-inventory__contact">
       <p>If you have any questions or to want to schedule a printer or a consultation, please contact <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>. To see our open hours and printer reservations, visit <a href="http://scholarslab.org/makerspace/">http://scholarslab.org/makerspace/</a>.</p>
